<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_top" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/txt_login" />

        <TextView
            android:id="@+id/tv_register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="220dp"
            android:layout_marginRight="30dp"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </FrameLayout>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="3dp"
        android:autofillHints="Email"
        android:background="@drawable/bg_radius"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:autofillHints="Password"
        android:background="@drawable/bg_radius"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_re_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:autofillHints="Password"
        android:background="@drawable/bg_radius"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/hint_re_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/txt_have_account"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>

